--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,11 @@
 <resources>
 
     <style name="Theme.MusicPlayer" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.StartScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/animated_icon_splash</item>
+        <item name="postSplashScreenTheme">@style/Theme.MusicPlayer</item>
+    </style>
+
 </resources>
